Simplify service limit clamping